Commentaires pour le code pour Mouton.